 * Enabled server-side storing of contact aliases. (#11802)

AIM, ICQ, and MobileMe
 * Added a preference to always use the AOL proxy server for file transfers and direct IM. (#11413)
 * Added a preference to use SSL for connections. (#9553) You can get information on the certificate by right-clicking the account in the Accounts preferences.

Miscellaneous
 * You can now define which applications should be the default for different services in the Advanced preferences. (#158)
 * The about box credits are now scrollable. (#9967)
 * The unread count is now cleared when clearing the display. (#10605)
 * Possibly fixed support for a PAC proxy server. (#224, #11364)
 * Disabled the "Show # recent messages in new chats" option when "Log messages" is off. (#11359)
 * Menu items such as “Show Offline Contacts” now always use the “Show” verb, with a checkbox indicating that they're currently shown. Previous versions indicated that by changing the verb to “Hide”. #4740.
 * Add "Contact went mobile" and "Contact returns from mobile" events. (#3248)
 * Fixed AppleScript erroring when creating a new status object. (#8863)

Version 1.3.3 (2/19/2009)
 * Major changes
    * Fixed a crash when using XMPP gateways and removing contacts
    * Switched to the pidgin-facebook plugin for Facebook connectivity, which should resolve several issues with Facebook and improve the interaction between Adium and Safari when both are logged into Facebook.
    * Automatically send messages to offline contact when offline messaging is supported rather than prompting to send now / send later (#11127)
    * Fixed updating the list of users in a groupchat in many situations (#183, #10727)
    * Tweaked the behavior of standard contact list type-to-search (#11496)
    * Fixed ICQ aliases storage on the server (#9890)
    * Fixed problem of events being recorded with wrong contact (#10436)
    * Fixed visual glitch that made creating a SameTime account impossible in some localizations (#11675)